Now able to give whole and decimal number outputs